--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ tower = {version = "0.4.12", features = ["full"]}
 serde_json = "1.0.79"
 serde = "1.0.136"
 serde_derive = "1.0.136"
-[dependencies.mongodb]
-version = "2.1.0"
-default-features = false
-features = ["async-std-runtime"]
+mongodb = "2.0.0"
+# [dependencies.mongodb]
+# version = "2.1.0"
+# default-features = false
+# features = ["async-std-runtime"]
