--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.79"
 serde = "1.0.136"
 serde_derive = "1.0.136"
 mongodb = "2.0.0"
+futures = "0.3.21"
 # [dependencies.mongodb]
 # version = "2.1.0"
 # default-features = false
