--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,4 @@ serde = "1.0.136"
 serde_derive = "1.0.136"
 mongodb = "2.0.0"
 futures = "0.3.21"
-# [dependencies.mongodb]
-# version = "2.1.0"
-# default-features = false
-# features = ["async-std-runtime"]
+bcrypt = "0.12"
