--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.4.8"
+axum = {version= "0.4.8", features = ["headers"]}
 hyper = {version = "0.14.17", features = ["full"]}
 tokio = {version = "1.17.0", features = ["full"]}
 tower = {version = "0.4.12", features = ["full"]}
@@ -18,3 +18,4 @@ futures = "0.3.21"
 bcrypt = "0.12"
 jsonwebtoken = "8.0"
 once_cell = "1.8"
+headers = "0.3"
