--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 	"settings": {},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": ["rust-lang.rust", "vadimcn.vscode-lldb", "be5invis.toml", "ms-azuretools.vscode-docker"]
+	"extensions": ["matklad.rust-analyzer", "vadimcn.vscode-lldb", "be5invis.toml", "ms-azuretools.vscode-docker"]
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
