--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ jsonwebtoken = "8.0"
 once_cell = "1.8"
 headers = "0.3"
 axum-extra = "0.2.1"
+tracing = "0.1.34"
+tower-http = { version = "0.2", features = ["map-request-body", "util"] }
