--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ bcrypt = "0.12"
 jsonwebtoken = "8.0"
 once_cell = "1.8"
 tower-http = { version = "0.2", features = ["map-request-body", "util"] }
+colored = "2"
